--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@tanstack/react-query": "^5.17.9",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.7",
     "react-native-tab-view": "^3.5.2",
