--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-fast-image": "^8.6.3",
+    "react-native-maps": "^1.9.1",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.7",
     "react-native-tab-view": "^3.5.2",
