--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
@@ -35,7 +36,11 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
-    "prettier": "3.1.1"
+    "prettier": "3.1.1",
+    "jest": "^29.7.0"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "private": true
 }
