--- a/pokemon/.eslintrc.json
+++ b/pokemon/.eslintrc.json
@@ -10,7 +10,8 @@
     ],
     "plugins": [
         "react",
-        "react-native"
+        "react-native",
+        "jest"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -19,6 +20,22 @@
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "no-use-before-define": 0,
-        "react/prop-types": 0
-    }
+        "react/prop-types": 0,
+        "jest/no-disabled-tests": "warn",
+        "jest/no-focused-tests": "error",
+        "jest/no-identical-title": "error",
+        "jest/prefer-to-have-length": "warn",
+        "jest/valid-expect": "error"
+    },
+    "overrides": [
+        {
+          "files": [
+            "**/*.test.js",
+            "**/*.test.jsx"
+          ],
+          "env": {
+            "jest": true
+          }
+        }
+      ]
 }
