--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -28,16 +28,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.11",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.6.2",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
-    "prettier": "3.1.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "prettier": "3.1.1"
   },
   "jest": {
     "preset": "react-native"
