--- a/pokemon/package.json
+++ b/pokemon/package.json
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.11",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -39,10 +41,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
     "jest": "^29.7.0",
-    "prettier": "3.1.1"
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^23.2.0",
+    "prettier": "3.1.1",
+    "react-test-renderer": "^18.2.0"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "testEnvironment": "jsdom"
   },
   "private": true
 }
